--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link data-n-head="ssr" rel="icon" type="image/png" href="https://dnc.group/_img/_icons/dnc_icone.png">
     <title>DNC</title>
 </head>
 <body>
